<resources>
    <string name="app_name">Firebase UI</string>

    <!-- PROJECT SPECIFIC STRINGS -->
    <string name="continue_with_current_account">Use currently signed in account</string>
    <string name="title_activity_main">icode 2017</string>
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_residency">Status:</string>
    <string name="profile_points">Level/Exp:</string>
    <string name="profile_preset">Default Preset:</string>
    <string name="profile_history">History</string>
    <string name="residency">Residency:</string>
    <string name="continueToApp">Continue to app</string>
    <string name="tourist">Tourist</string>
    <string name="resident">Resident</string>
    <string name="signout">Sign Out</string>
    <string name="reset">Reset Account</string>

    /* Preset Setting Class*/
    <string name="preset">Presets</string>

    <string name="general">General Settings</string>
    <string name="about">About</string>
    <string name="aboutInfo">This application was created jointly by 3 coders in NUS High under the
            team name of SIGSEGV. /nThis application was originally created for i.code 2017.</string>
    <string name="software">Software Version</string>
    <string name="softwareInfo">Software Version 1.1</string>

    <string name="notif">Notifications</string>
    <string name="notifText">Allow notifications</string>
    <string name="notifToast">Notifications setting has been updated</string>

    <string name="pw">Change Password</string>
    <string name="currentHint">Current Password</string>
    <string name="newHint">New Password</string>
    <string name="mismatchError">Your current password is incorrect</string>
    <string name="sameError">Your new password cannot be the same as your current password</string>
    <string name="pwSet">New password has been set</string>

    <string name="sound">Sounds</string>
    <string name="soundOp">Enable Sound</string>
    <string name="soundToast">Sound setting has been updated</string>


    <string name="name_chat">ChatActivity</string>
    <string name="name_auth_ui">Auth UI demo</string>
    <string name="name_image">Storage Image Demo</string>

    <string name="desc_chat">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
    <string name="desc_auth_ui">Demonstrates the Firebase Auth UI flow, with customization options.</string>
    <string name="desc_image">Demonstrates displaying an image from Cloud Storage using Glide.</string>


    <!-- strings for Auth UI demo activities -->
    <eat-comment />
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in">Start</string>
    <string name="green_theme">Green Theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="use_theme_header">Use theme:</string>
    <string name="logo_header">Logo:</string>
    <string name="firebase_logo_label">Firebase Auth</string>
    <string name="google_logo_label">Google</string>
    <string name="no_logo_label">None</string>
    <string name="auth_providers_header">Use auth providers:</string>
    <string name="email_label">Email</string>
    <string name="facebook_label">Facebook</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="twitter_label">Twitter</string>
    <string name="twitter_label_missing_config">Twitter - configuration missing</string>
    <string name="google_label">Google</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="google_tos_label">Google TOS</string>
    <string name="firebase_tos_label">Firebase TOS</string>
    <string name="tos_header">Terms of Service URL:</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="default_theme">Default theme</string>
    <string name="configuration_required">Configuration is required - see README.md</string>
    <string name="other_options_header">Other Options:</string>
    <string name="enable_smartlock">Enable SmartLock for Passwords</string>
    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>
    <string name="anonymous_auth_failed_msg">Anonymous authentication failed, various components of the demo will not work. Make sure your device is online and that Anonymous Auth is configured in your Firebase project(https://console.firebase.google.com/project/_/authentication/providers)</string>
    <string name="extra_google_scopes">Example extra Google scopes</string>
    <string name="games">Games</string>
    <string name="extra_facebook_scopes">Example extra Facebook scopes</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="send">Send</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="choose_image">Choose Image</string>
    <string name="accessibility_downloaded_image">Downloaded image</string>
    <string name="drive_file">Drive File</string>
    <string name="allow_new_email_acccount">Allow account creation if email does not exist.</string>


    <!-- strings for database demo activities -->
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="signed_in">Signed In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
