<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.firebase.uidemo.settings.general"
    android:orientation="vertical">

    <Button
        android:text="@string/general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/general"
        android:onClick="general"
        android:gravity="left|center_vertical" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/presets"
        android:text="Preset"
        android:onClick="presets"
        android:gravity="left|center_vertical" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notif"
        android:text="@string/notif"
        android:onClick="notif"
        android:gravity="left|center_vertical" />

    <Button
        android:text="@string/sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sound"
        android:onClick="sound"
        android:gravity="left|center_vertical" />

    <Button
        android:text="@string/pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pw"
        android:onClick="pw"
        android:gravity="left|center_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signout"
            android:text="@string/signout"
            android:onClick="signout"
            android:textColor="@android:color/holo_red_dark" />

        <Button
            android:text="@string/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:onClick="reset"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>

</LinearLayout>
