<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firebase.uidemo.icode2017.ProfileEditorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/profile_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"

            android:text="@string/profile_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_name_text"
            android:layout_toRightOf="@id/profile_name_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_name_text"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/profile_email"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_email_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_email_text"
            android:layout_toRightOf="@id/profile_email_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_residency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_email_text"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/profile_residency"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_residency_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_residency_text"
            android:layout_toRightOf="@id/profile_residency_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_residency_text"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/profile_points"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_points_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_points_text"
            android:layout_toRightOf="@id/profile_points_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_preset_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_points_text"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="Current Preset:"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile_preset_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_preset_text"
            android:layout_toRightOf="@id/profile_preset_text"
            android:textSize="16sp" />
    </RelativeLayout>

</FrameLayout>
